// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBanner renders hero banner with title and subtitle 1`] = `
<section
  className="jsx-636956448"
>
  <h1
    className="jsx-636956448"
  >
    Test title
  </h1>
  <h2
    className="jsx-636956448"
  >
    Test subtitle
  </h2>
</section>
`;

exports[`HeroBanner renders hero banner with title only 1`] = `
<section
  className="jsx-636956448"
>
  <h1
    className="jsx-636956448"
  >
    Test title
  </h1>
  
</section>
`;
